# api/handler/auth.go
@@ -40,3 +40,36 @@ func (h *Handler) TeacherLogin(c *gin.Context) {
 	handleResponse(c, h.Log, "Succes", http.StatusOK, loginResp)
 
 }
+
+// TeacherRegister godoc
+// @Router       /teacher/register [POST]
+// @Summary      Teacher register
+// @Description  Teacher register
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param        register body models.RegisterRequest true "register"
+// @Success      201  {object}  models.Response
+// @Failure      400  {object}  models.Response
+// @Failure      404  {object}  models.Response
+// @Failure      500  {object}  models.Response
+func (h *Handler) TeacherRegister(c *gin.Context) {
+	loginReq := models.RegisterRequest{}
+
+	if err := c.ShouldBindJSON(&loginReq); err != nil {
+		handleResponse(c, h.Log, "error while binding body", http.StatusBadRequest, err)
+		return
+	}
+
+	//TODO: need validate login
+	fmt.Println("sdaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaAAAAAAAAAAAAAAAAAAAa2222222")
+
+	err := h.Service.Auth().TeacherRegister(c.Request.Context(), loginReq)
+	if err != nil {
+		handleResponse(c, h.Log, "Bad request", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	handleResponse(c, h.Log, "Succes", http.StatusOK, "Your request succeed")
+
+}
