# api/router.go
@@ -42,6 +42,7 @@ func New(service service.IServiceManager, log logger.ILogger) *gin.Engine {
 	r.DELETE("/teacher/:id", h.DeleteTeacher)
 	r.GET("/teacher/getlesson/:id", h.TeacherCheckLessonNow)
 	r.POST("/teacher/login", h.TeacherLogin)
+	r.POST("/teacher/register", h.TeacherRegister)
 
 	r.POST("/subject", h.CreateSubject)
 	r.PUT("/subject/update/:id", h.UpdateSubject)
